--- a/styles/fish.css
+++ b/styles/fish.css
@@ -1,8 +1,9 @@
 .fishList {
-    background-color:white;
+    background-color: rgba(255, 255, 255, .75);
     flex-basis: 80%;
     display: flex;
     flex-wrap: wrap;
+    padding:.5em;
 }
 
 .fish__image {
