--- a/styles/tips.css
+++ b/styles/tips.css
@@ -1,8 +1,9 @@
 .tipList {
-    background-color:white;
+    background-color: rgba(255, 255, 255, .75);
     margin-left: 1em;
     flex-basis: 20%;
     min-width:200px;
+    padding:.5em;
 }
 
 .tipList {
