--- a/styles/main.css
+++ b/styles/main.css
@@ -6,7 +6,10 @@
 
 body {
     font-family: 'Lato', Arial, Helvetica, sans-serif;
-    background: url("https://cdn.vox-cdn.com/thumbor/oZPo_nWh9lay5MOVnYEt4IMQ3sQ=/0x46:1100x779/1200x800/filters:focal(0x46:1100x779)/cdn.vox-cdn.com/imported_assets/1394795/underwater-swim-thru-bubbles_JPG.jpg") no-repeat center center fixed; 
+    background: url(/images/background.jpg) no-repeat center center fixed;
+    background-size: cover;
+    height: 100%;
+    overflow: hidden;
 }
 
 .container {
