--- a/styles/fish.css
+++ b/styles/fish.css
@@ -1,12 +1,25 @@
 .fishList {
-    background-color: rgba(255, 255, 255, .75);
+    background-color: rgba(50, 46, 71, 0.75);
     flex-basis: 80%;
     display: flex;
     flex-wrap: wrap;
+    justify-content: space-between;
     padding:.5em;
+}
+
+.fish {
+    text-align: center;
+    background-color: white;
+    padding: .5em;
+    margin-bottom: .5em;
 }
 
 .fish__image {
     width: 8rem;
     height: 8rem;
+}
+
+.fish__name {
+    font-family: 'Permanent Marker', serif;
+    font-size:1.5em;
 }
