--- a/styles/main.css
+++ b/styles/main.css
@@ -3,6 +3,7 @@
 @import 'tips.css';
 
 @import url('https://fonts.googleapis.com/css?family=Lato:400,400i,700,700i,900&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Permanent+Marker&display=swap');
 
 body {
     font-family: 'Lato', Arial, Helvetica, sans-serif;
@@ -16,8 +17,4 @@ body {
     display: flex;
     flex-wrap: nowrap;
     justify-content: space-between;
-}
-
-.bordered {
-    border: 1px dashed goldenrod;
 }
