--- a/styles/nav.css
+++ b/styles/nav.css
@@ -1,6 +1,16 @@
 .navigation {
     padding: 1em 0;
 }
+.logo {
+    /* border: 1px solid blue; */
+    display:inline;
+    margin:0;
+    font-weight: 900;
+    font-size: 1.5em;
+    letter-spacing: .1em;
+    text-transform: uppercase;
+    color: darkblue;
+}
 
 .navigation__link {
     margin: 0 1em 1em 0;
@@ -8,7 +18,6 @@
     background-color:rgba(21, 131, 175, .7);
     font-weight: 900;
     font-size: 1em;
-    letter-spacing: .1em;;
 }
 
 a:link {
