--- a/styles/fish.css
+++ b/styles/fish.css
@@ -3,7 +3,7 @@
     flex-basis: 80%;
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-between;
+    justify-content: flex-start;
     padding:.5em;
 }
 
@@ -11,15 +11,22 @@
     text-align: center;
     background-color: white;
     padding: .5em;
-    margin-bottom: .5em;
+    margin: .5em;
+    -webkit-box-shadow: 0px 11px 7px -7px rgba(0,0,0,0.63); 
+    box-shadow: 0px 11px 7px -7px rgba(0,0,0,0.63);
 }
 
 .fish__image {
     width: 8rem;
     height: 8rem;
+
 }
 
 .fish__name {
     font-family: 'Permanent Marker', serif;
     font-size:1.5em;
+}
+
+dialog {
+    text-align:left;
 }
