--- a/styles/nav.css
+++ b/styles/nav.css
@@ -4,7 +4,7 @@
 .logo {
     /* border: 1px solid blue; */
     display:inline;
-    margin:0;
+    margin:0 16px 0 15px;
     font-weight: 900;
     font-size: 1.5em;
     letter-spacing: .1em;
