--- a/styles/fish.css
+++ b/styles/fish.css
@@ -1,3 +1,34 @@
+button {
+    display: inline-block;
+    border: none;
+    padding: .5em 1em;
+    margin: 0;
+    text-decoration: none;
+    background: transparent;
+    color: #3a7fd3;
+    font-family: sans-serif;
+    font-size: 1rem;
+    cursor: pointer;
+    text-align: center;
+    -webkit-appearance: none;
+    -moz-appearance: none;
+}
+
+button:hover,
+button:focus {
+    color:white;
+    background: #3a7fd3;
+}
+
+button:focus {
+    outline: 1px solid #fff;
+    outline-offset: -4px;
+}
+
+button:active {
+    transform: scale(0.99);
+}
+
 .fishList {
     /* background-color: rgba(50, 46, 71, 0.75); */
     flex-basis: 80%;
