--- a/styles/fish.css
+++ b/styles/fish.css
@@ -58,6 +58,51 @@ button:active {
     font-size:1.5em;
 }
 
-dialog {
+.dialog--fish {
     text-align:left;
+    padding-top:25px;
+}
+
+.dialog--fish table {
+    border: 1px solid blue;
+}
+
+.button--close {
+    position: absolute;
+    top: 0;
+    right: 0;
+}
+
+.button--close {
+    display: inline-block;
+    border: none;
+    width:25px;
+    height: 25px;
+    padding: .5rem;
+    margin: 0;
+    text-decoration: none;
+    background-color: crimson;
+    color: white;
+    font-family: sans-serif;
+    font-size: 1rem;
+    cursor: pointer;
+    text-align: center;
+}
+
+.button--close:hover {
+    color:white;
+    background-color: tomato;
+}
+.button--close:focus {
+    color:white;
+    background: crimson;
+}
+
+.button--close:focus {
+    outline: 1px solid #fff;
+    outline-offset: -4px;
+}
+
+.button--close:active {
+    transform: scale(0.99);
 }
