--- a/styles/fish.css
+++ b/styles/fish.css
@@ -60,11 +60,22 @@ button:active {
 
 .dialog--fish {
     text-align:left;
-    padding-top:25px;
+    padding:0;
+    padding-top:35px;
+    min-width: 200px;
+}
+
+.dialog__fishName {
+    font-family: 'Permanent Marker', serif;
+    font-size:1.5em;
+    position: absolute;
+    top:0;
+    left:0;
+    padding-left:.5em;
 }
 
 .dialog--fish table {
-    border: 1px solid blue;
+    width:100%;
 }
 
 .button--close {
@@ -76,8 +87,8 @@ button:active {
 .button--close {
     display: inline-block;
     border: none;
-    width:25px;
-    height: 25px;
+    width:35px;
+    height: 35px;
     padding: .5rem;
     margin: 0;
     text-decoration: none;
