Added card flip effect to locations.html

--- a/styles/main.css
+++ b/styles/main.css
@@ -1,6 +1,7 @@
 @import 'nav.css';
 @import 'fish.css';
 @import 'tips.css';
+@import 'locations.css';
 
 @import url('https://fonts.googleapis.com/css?family=Lato:400,400i,700,700i,900&display=swap');
 @import url('https://fonts.googleapis.com/css?family=Permanent+Marker&display=swap');
